# chinacolor-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
checklist/: colors.html  palettes.html
chinacolor/: __init__.py  browser.py  cmap.py  colorparse.py  ctc.py  dataset.py  frames.py  palettes.py  plotting.py  recommend.py  themes.py
chinacolor/data/: chinacolor.csv  palette_list.json
chinacolor/templates/: colors_basic.html  colors_dt.html  index.html  palettes_basic.html  palettes_dt.html
examples/: 01_quickstart.ipynb  02_seaborn_usage.ipynb  03_custom_palettes.ipynb  04_dataframes_and_grid.ipynb  05_themes.ipynb  06_fonts_and_recommendations.ipynb  07_browser_and_parsing.ipynb
